--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,31 @@
 {
-    "name": "simplon/task",
-    "description": "Create and run console tasks.",
-    "homepage": "https://github.com/fightbulc/simplon_task",
-    "version": "0.5.0",
-    "type": "library",
-    "keywords": ["console", "tasks"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Tino Ehrich",
-            "email": "opensource@efides.com",
-            "role": "developer"
-        }
-    ],
-
-    "minimum-stability": "dev",
-
-    "require": {
-        "php": ">=5.3.3",
-        "ext-json": "*"
-    },
-
-    "autoload": {
-        "psr-0": {
-            "Simplon\\Task\\": "src/"
-        }
+  "name": "simplon/task",
+  "description": "Create and run console tasks.",
+  "homepage": "https://github.com/fightbulc/simplon_task",
+  "version": "0.5.0",
+  "type": "library",
+  "keywords": ["console", "tasks"],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Tino Ehrich",
+      "email": "opensource@efides.com",
+      "role": "developer"
     }
+  ],
+
+  "minimum-stability": "dev",
+
+  "bin": ["bin/taskr.php"],
+
+  "require": {
+    "php": ">=5.4",
+    "ext-json": "*"
+  },
+
+  "autoload": {
+    "psr-0": {
+      "Simplon\\Task": "src/"
+    }
+  }
 }
